# hdt-bindings

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  setup.py
include/: hdt_document.hpp  lazy_id_iterator.hpp
src/: __init__.py  hdt.cpp  hdt_document.cpp  lazy_id_iterator.cpp  lib.rs
