## https://doc.rust-lang.org/cargo/reference/config.html
[package]
name = "hdt_python"
version = "0.0.0"
edition = "2021"

[features]
default = []
test_watdiv = []

[dependencies]
## for the bingdings with c++
autocxx = "0.21.2"
cxx     = "1.0.67"

[build-dependencies]
glob = "0.3.0"
autocxx-build = "0.21.2"
miette = { version="4.3", features = [ "fancy" ] }

